force-app/main/default/objects/Child__c/fields/Current_Address_of_Parent__c.field-meta.xml
<CustomField>
    <fullName>Current_Address_of_Parent__c</fullName>
    <formula>Parent__r.Current_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Address of Parent</label>
    <type>Text</type>
</CustomField>