force-app/main/default/objects/Child__c/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Male</label>
    <type>Checkbox</type>
</CustomField>