force-app/main/default/objects/Child__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Parent__c</referenceTo>
    <relationshipLabel>Childs</relationshipLabel>
    <relationshipName>Childs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>