force-app/main/default/objects/Child__c/fields/Parent_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Address__c</fullName>
    <formula>Parent__r.Parent_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Address</label>
    <type>Text</type>
</CustomField>