force-app/main/default/objects/Child__c/fields/Parent_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone_No__c</fullName>
    <formula>Parent__r.Phone_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Phone No</label>
    <type>Text</type>
</CustomField>