force-app/main/default/objects/Child__c/fields/Parents_Adhar_No__c.field-meta.xml
<CustomField>
    <fullName>Parents_Adhar_No__c</fullName>
    <formula>Parent__r.Adhar_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parents Adhar No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>